<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/card_view_optimize"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_needed"
                android:textColor="@color/color_0379ff"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/grant_app_permission"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_action_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/btn_primary_round_2"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/grant_now"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>
