<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_dialog"
            android:padding="@dimen/_12sdp">

            <View
                android:id="@+id/view_logo"
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_logo"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/exit_app_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/exit_app_content"
                android:textColor="@color/color_black_50"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:layout_below="@id/tv_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_exit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_cancel"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/text_exit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_continue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_fill_24"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/text_continue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_exit_app" />
    </RelativeLayout>
</layout>