<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splashLayoutPolicy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:tag="layout/activity_policy_0">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_logo_app"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:src="@drawable/ic_512"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:0.877"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.66" />

        <TextView
            android:id="@+id/tv_name_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo_app" />

        <RelativeLayout
            android:id="@+id/rl_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_app">

            <CheckBox
                android:id="@+id/splashLayoutPolicy_cb"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp" />

            <TextView
                android:id="@+id/tv_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_toEndOf="@+id/splashLayoutPolicy_cb"
                android:gravity="center"
                android:text="@string/text_policy_format"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_toEndOf="@+id/tv_agree"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_start_now"
            android:layout_width="0dp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/shape_imv_preview"
            android:gravity="center"
            android:text="@string/text_start_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_policy"
            app:layout_constraintWidth_percent="0.35" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>