<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/tv_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_grant_permission"
                android:textColor="@color/color_text_default"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/text_permission_content"
                android:textColor="@color/color_text_default"
                android:textSize="@dimen/_12ssp" />

            <RelativeLayout
                android:id="@+id/rl_switch_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/text_storage_permission"
                    android:textColor="@color/color_text_default"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@drawable/ic_switch"
                    android:thumb="@null"
                    android:track="@null" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_continue"
            android:textColor="@color/color_text_default"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@id/ln_native"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ln_native"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <include layout="@layout/shimmer_native" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>